test update changelog
feature: new feature 1
bug: not have
behind: test
seo: mai roo

--- a/package.json
+++ b/package.json
@@ -1,3 +1,14 @@
 {
-	"version": "1"
+	"version": "1",
+	"name": "generate-changelog",
+	"main": "index.js",
+	"repository": "https://github.com/ToppyPeerapon/generate-changelog.git",
+	"author": "ToppyPeerapon <chun.peerapon@gmail.com>",
+	"license": "MIT",
+	"dependencies": {
+		"prettier": "^2.2.1"
+	},
+	"devDependencies": {
+		"@types/node": "^14.14.31"
+	}
 }
